<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <View
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="40dp"
                    android:background="@drawable/ic_launcher_foreground"
                    android:backgroundTint="@color/colorAccent"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="25.5dp"
                    android:text="@string/app_name"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title"
                    android:textSize="20sp" />
            </LinearLayout>

            <androidx.cardview.widget.CardView
                android:id="@+id/systemVersionCardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="10dp"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardBackgroundColor="@color/colorAccent"
                app:cardCornerRadius="8dp"
                app:cardElevation="4dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="18dp"
                    android:paddingTop="15dp"
                    android:paddingEnd="18dp"
                    android:paddingBottom="15dp">

                    <View
                        android:id="@+id/systemVersionView"
                        android:layout_width="28dp"
                        android:layout_height="28dp"
                        android:layout_centerVertical="true"
                        android:background="@drawable/ic_perm_device_information" />

                    <TextView
                        android:id="@+id/systemVersionTitleTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="25dp"
                        android:layout_toEndOf="@id/systemVersionView"
                        android:text="@string/systemVersionTitle"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:textColor="@color/colorWhite" />

                    <TextView
                        android:id="@+id/systemVersionSummaryTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/systemVersionTitleTextView"
                        android:layout_alignStart="@id/systemVersionTitleTextView"
                        android:layout_marginTop="5dp"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small"
                        android:textColor="@color/colorWhite" />

                </RelativeLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:id="@+id/updateInfoCardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="10dp"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardBackgroundColor="@color/colorPrimary"
                app:cardCornerRadius="8dp"
                app:cardElevation="4dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="18dp"
                    android:paddingTop="15dp"
                    android:paddingEnd="18dp"
                    android:paddingBottom="15dp">

                    <View
                        android:id="@+id/updateInfoView"
                        android:layout_width="28dp"
                        android:layout_height="28dp"
                        android:layout_centerVertical="true"
                        android:background="@drawable/ic_assignment" />

                    <TextView
                        android:id="@+id/updateInfoTitleTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="25dp"
                        android:layout_toEndOf="@id/updateInfoView"
                        android:text="@string/updateInfoTitle"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:textColor="@color/colorWhite" />

                    <TextView
                        android:id="@+id/updateInfoSummaryTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/updateInfoTitleTextView"
                        android:layout_alignStart="@id/updateInfoTitleTextView"
                        android:layout_marginTop="5dp"
                        android:text="@string/updateInfoSummary"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small"
                        android:textColor="@color/colorWhite" />
                </RelativeLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:id="@+id/firmwareListCardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="10dp"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardBackgroundColor="@color/colorPrimary"
                app:cardCornerRadius="8dp"
                app:cardElevation="4dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="18dp"
                    android:paddingTop="15dp"
                    android:paddingEnd="18dp"
                    android:paddingBottom="15dp">

                    <View
                        android:id="@+id/firmwareListView"
                        android:layout_width="28dp"
                        android:layout_height="28dp"
                        android:layout_centerVertical="true"
                        android:background="@drawable/ic_update" />

                    <TextView
                        android:id="@+id/firmwareListTitleTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="25dp"
                        android:layout_toEndOf="@id/firmwareListView"
                        android:text="@string/firmwareListTitle"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:textColor="@color/colorWhite" />

                    <TextView
                        android:id="@+id/firmwareListSummaryTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/firmwareListTitleTextView"
                        android:layout_alignStart="@id/firmwareListTitleTextView"
                        android:layout_marginTop="5dp"
                        android:text="@string/firmwareListSummary"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small"
                        android:textColor="@color/colorWhite" />
                </RelativeLayout>
            </androidx.cardview.widget.CardView>
            <LinearLayout
                android:id="@+id/aboutLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:layout_marginStart="35dp"
                android:layout_marginEnd="30dp"
                android:layout_marginTop="5dp"
                android:background="?android:attr/selectableItemBackground"
                android:orientation="horizontal">
                <View
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:background="@drawable/ic_info"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="25dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:text="@string/aboutTitle"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>